[inference_metadata_fields] Introduce a final index setting for semantic text format selection (#119070)
This change replaces the system property used for enabling the new semantic text format with a dedicated index setting resolved at index creation.

The new format is tied to the index version, so this approach ensures that indices created with the new version but using the legacy format retain their original configuration. By sealing the format at index creation, we prevent unexpected changes and provide flexibility in tests to explicitly choose the desired format for execution.